[tool.poetry]
name = "tigerpath-api"
version = "0.1.0"
description = ""
authors = ["Open Source UC <hello-world@osuc.dev>"]
license = "GPLv3"
readme = "readme.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
prisma = "^0.9"
python-cas = "^1.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
zeep = {extras = ["async"], version = "^4.2.1"}
unidecode = "^1.3.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
tomli = "^2.0.1"
pyright = "^1.1.315"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
ignore = ["E203"]
exclude = [
    "__pycache__",
    "build",
    "dist",
    ".venv"
]

[tool.ruff.mccabe]
max-complexity = 15

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
stubPath = "../typings"

# Rules
# https://github.com/tiangolo/fastapi/issues/4487
